Fix some localization strings Fix shrinkwrap for ranges ending at start of paragraph
git-svn-id: http://marginalia.googlecode.com/svn/marginalia-lib/trunk@270 18b106f2-9c29-0410-bf68-a56e300ca647

--- a/marginalia/marginalia.css
+++ b/marginalia/marginalia.css
@@ -204,6 +204,11 @@
 	width: 95%;
 }
 
+.hentry .notes li button.annotation-access {
+	heigh: 1.2em;
+	width: 1em;
+}
+
 /*
 .hentry .notes li.hover,
 .hentry .entry-content em.annotation.hover,
